--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -452,33 +452,174 @@
       "metadata": {
         "id": "YBna2skBMwFH",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        },
-        "outputId": "e51283ef-90e7-4cb6-a2b9-68077432136f"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
         "model.add(keras.layers.Conv2D(filters=64, kernel_size=2,\n",
         "                             padding=\"same\", activation=\"relu\",\n",
-        "                              input_shape=28,28,1)))\n"
+        "                              input_shape=(28,28,1)))\n"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "tTG-KKfnOK7h",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "model.add(keras.layers.MaxPooling2D(pool_size=2))\n",
+        "model.add(keras.layers.Dropout(0.3))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "jepKuzvZUFa6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "model.add(keras.layers.Conv2D(filters=32, kernel_size=2,\n",
+        "\tactivation=\"relu\",\n",
+        "\tpadding=\"same\"))\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ZZ20A-sGUHih",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 442
+        },
+        "outputId": "9f081ae7-f197-4539-db31-f20b635caa0c"
+      },
+      "cell_type": "code",
+      "source": [
+        "model.add(keras.layers.Flatten())\n",
+        "model.add(keras.layers.Dense(256, activation=\"relu\"))\n",
+        "model.add(keras.layers.Dropout(0.5))\n",
+        "model.add(keras.layers.Dense(10, activation=\"softmax\"))\n",
+        "\n",
+        "model.summary()"
+      ],
+      "execution_count": 34,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-22e96c841a2f>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    input_shape=28,28,1)))\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d (Conv2D)              (None, 28, 28, 64)        320       \n",
+            "_________________________________________________________________\n",
+            "max_pooling2d (MaxPooling2D) (None, 14, 14, 64)        0         \n",
+            "_________________________________________________________________\n",
+            "dropout (Dropout)            (None, 14, 14, 64)        0         \n",
+            "_________________________________________________________________\n",
+            "conv2d_1 (Conv2D)            (None, 14, 14, 32)        8224      \n",
+            "_________________________________________________________________\n",
+            "flatten (Flatten)            (None, 6272)              0         \n",
+            "_________________________________________________________________\n",
+            "flatten_1 (Flatten)          (None, 6272)              0         \n",
+            "_________________________________________________________________\n",
+            "dense (Dense)                (None, 256)               1605888   \n",
+            "_________________________________________________________________\n",
+            "dropout_1 (Dropout)          (None, 256)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 10)                2570      \n",
+            "=================================================================\n",
+            "Total params: 1,617,002\n",
+            "Trainable params: 1,617,002\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "metadata": {
-        "id": "tTG-KKfnOK7h",
+        "id": "v3KQfd7bUQTJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "model.compile(\n",
+        "\tloss=\"categorical_crossentropy\",\n",
+        "\toptimizer=\"adam\",\n",
+        "\tmetrics=[\"accuracy\"]\n",
+        "\t)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "V24ppIvzUZBD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "from keras.callbacks import ModelCheckpoint\n",
+        "\n",
+        "checkpointer = ModelCheckpoint(filepath=\"model.weights.hdf5\",\n",
+        "\t\t\t\tverbose = 1,\n",
+        "\t\t\t\tsave_best_only=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "9ZdDd0I1UhuJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "812c3f92-35ad-4cdf-f136-7d44c0a1750d"
+      },
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "model.fit(\n",
+        "\tx_train,\n",
+        "\ty_train,\n",
+        "\tbatch_size=64,\n",
+        "\tepochs=10,\n",
+        "\tvalidation_data=(x_valid, y_valid),\n",
+        "\tcallbacks= [checkpointer] #funcao que salva no fim de cada época\n",
+        ")\n"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train on 50000 samples, validate on 5000 samples\n",
+            "Epoch 1/10\n",
+            " 5248/50000 [==>...........................] - ETA: 1:56 - loss: 0.9663 - acc: 0.6496"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "63lQoaLKUs2I",
         "colab_type": "code",
         "colab": {}
       },
