--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -192,12 +192,13 @@
       },
       "cell_type": "code",
       "source": [
-        "fashion_mnist_labels = [\"camisa\",\n",
+        "fashion_mnist_labels = [\"Camisata\",\n",
         "                       \"Calça\",\n",
         "                       \"Pulôver\",\n",
         "                       \"Vestido\",\n",
         "                       \"Cassaco\",\n",
         "                       \"Sandalia\",\n",
+        "                        \"Camisa\",\n",
         "                       \"Tênis\",\n",
         "                       \"Bolsa\",\n",
         "                       \"Bota\"]"
@@ -588,9 +589,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 731
         },
-        "outputId": "812c3f92-35ad-4cdf-f136-7d44c0a1750d"
+        "outputId": "9d84a11e-1447-48cc-ba0e-554e67258e1f"
       },
       "cell_type": "code",
       "source": [
@@ -604,16 +605,66 @@
         "\tcallbacks= [checkpointer] #funcao que salva no fim de cada época\n",
         ")\n"
       ],
-      "execution_count": 0,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Train on 50000 samples, validate on 5000 samples\n",
             "Epoch 1/10\n",
-            " 5248/50000 [==>...........................] - ETA: 1:56 - loss: 0.9663 - acc: 0.6496"
+            "50000/50000 [==============================] - 131s 3ms/step - loss: 0.5068 - acc: 0.8187 - val_loss: 0.3265 - val_acc: 0.8808\n",
+            "\n",
+            "Epoch 00001: val_loss improved from inf to 0.32654, saving model to model.weights.hdf5\n",
+            "Epoch 2/10\n",
+            "50000/50000 [==============================] - 128s 3ms/step - loss: 0.3440 - acc: 0.8757 - val_loss: 0.2886 - val_acc: 0.8934\n",
+            "\n",
+            "Epoch 00002: val_loss improved from 0.32654 to 0.28861, saving model to model.weights.hdf5\n",
+            "Epoch 3/10\n",
+            "50000/50000 [==============================] - 126s 3ms/step - loss: 0.2998 - acc: 0.8906 - val_loss: 0.2555 - val_acc: 0.9056\n",
+            "\n",
+            "Epoch 00003: val_loss improved from 0.28861 to 0.25555, saving model to model.weights.hdf5\n",
+            "Epoch 4/10\n",
+            "50000/50000 [==============================] - 128s 3ms/step - loss: 0.2700 - acc: 0.9003 - val_loss: 0.2766 - val_acc: 0.8914\n",
+            "\n",
+            "Epoch 00004: val_loss did not improve from 0.25555\n",
+            "Epoch 5/10\n",
+            "50000/50000 [==============================] - 127s 3ms/step - loss: 0.2460 - acc: 0.9082 - val_loss: 0.2287 - val_acc: 0.9174\n",
+            "\n",
+            "Epoch 00005: val_loss improved from 0.25555 to 0.22875, saving model to model.weights.hdf5\n",
+            "Epoch 6/10\n",
+            "50000/50000 [==============================] - 129s 3ms/step - loss: 0.2268 - acc: 0.9159 - val_loss: 0.2138 - val_acc: 0.9190\n",
+            "\n",
+            "Epoch 00006: val_loss improved from 0.22875 to 0.21382, saving model to model.weights.hdf5\n",
+            "Epoch 7/10\n",
+            "50000/50000 [==============================] - 131s 3ms/step - loss: 0.2101 - acc: 0.9226 - val_loss: 0.2108 - val_acc: 0.9242\n",
+            "\n",
+            "Epoch 00007: val_loss improved from 0.21382 to 0.21076, saving model to model.weights.hdf5\n",
+            "Epoch 8/10\n",
+            "50000/50000 [==============================] - 131s 3ms/step - loss: 0.1924 - acc: 0.9289 - val_loss: 0.2071 - val_acc: 0.9278\n",
+            "\n",
+            "Epoch 00008: val_loss improved from 0.21076 to 0.20709, saving model to model.weights.hdf5\n",
+            "Epoch 9/10\n",
+            "50000/50000 [==============================] - 127s 3ms/step - loss: 0.1785 - acc: 0.9323 - val_loss: 0.2006 - val_acc: 0.9268\n",
+            "\n",
+            "Epoch 00009: val_loss improved from 0.20709 to 0.20059, saving model to model.weights.hdf5\n",
+            "Epoch 10/10\n",
+            "50000/50000 [==============================] - 129s 3ms/step - loss: 0.1687 - acc: 0.9358 - val_loss: 0.2018 - val_acc: 0.9246\n",
+            "\n",
+            "Epoch 00010: val_loss did not improve from 0.20059\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f9e53ab15f8>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
         }
       ]
     },
@@ -621,11 +672,65 @@
       "metadata": {
         "id": "63lQoaLKUs2I",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 608
+        },
+        "outputId": "344bbc81-1b4c-47b2-b256-17b67b98773d"
+      },
+      "cell_type": "code",
+      "source": [
+        "model.load_weights('model.weights.hdf5')\n",
+        "\n",
+        "\n",
+        "\n",
+        "score = model.evaluate(x_test, y_test, verbose=0)\n",
+        "\n",
+        "\n",
+        "print(score[1] * 100, \"%\")"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-53-38b75d18ff2a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mscore\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mevaluate\u001b[0;34m(self, x, y, batch_size, verbose, sample_weight, steps)\u001b[0m\n\u001b[1;32m   1435\u001b[0m         \u001b[0mcheck_steps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1436\u001b[0m         \u001b[0msteps_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'steps'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1437\u001b[0;31m         steps=steps)\n\u001b[0m\u001b[1;32m   1438\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1439\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcontext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecuting_eagerly\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[0;34m(self, x, y, sample_weight, class_weight, batch_size, check_steps, steps_name, steps, validation_split)\u001b[0m\n\u001b[1;32m    915\u001b[0m           \u001b[0mfeed_output_shapes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    916\u001b[0m           \u001b[0mcheck_batch_axis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# Don't enforce the batch size.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 917\u001b[0;31m           exception_prefix='target')\n\u001b[0m\u001b[1;32m    918\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    919\u001b[0m       \u001b[0;31m# Generate sample-wise weight values given the `sample_weight` and\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training_utils.py\u001b[0m in \u001b[0;36mstandardize_input_data\u001b[0;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[1;32m    180\u001b[0m                            \u001b[0;34m': expected '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' to have '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    181\u001b[0m                            \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' dimensions, but got array '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 182\u001b[0;31m                            'with shape ' + str(data_shape))\n\u001b[0m\u001b[1;32m    183\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcheck_batch_axis\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    184\u001b[0m           \u001b[0mdata_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_shape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Error when checking target: expected dense_1 to have 2 dimensions, but got array with shape (10000, 28, 28, 10)"
+          ]
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "x1ATGkOmZ5Lk",
+        "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        ""
+        "y_hat = model.predict(x_test)\n",
+        "\n",
+        "y_hat\n",
+        "\n",
+        "figure = plt.figure(figure=(20, 8))\n",
+        "for i, index in enumerate(np.random.choice(x_test.shape[0],\n",
+        "                                          size = 15, replace(False))) :\n",
+        "  \n",
+        "  ax = figure.add_subplot(3, 5, i + 1, xticks = [], yticks=[])\n",
+        "  ax.imshow(np.sequence(x_test[index]))\n",
+        "  predict_index = np.argmax(y_hat[index])\n",
+        "  true_index = np.argmax(y_test[index])\n",
+        "\n",
+        "  \n",
+        "  ax.set.title(\"{} ({})\".format)\n",
+        "  "
       ],
       "execution_count": 0,
       "outputs": []
